2004-03-10  Eric Blake  <ebb9@byu.net>

	* src/decl.cpp (ReadType): Bug 3852 - fix at least the simple test
	case, where valid A referring to valid B referring to invalid C
	was not caught in A.

2004-03-09  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp (GetAnonymousType): Fix invalid assertion that was
	triggering during placeholder types - bug 3884.

2004-03-07  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp (ProcessInstanceInitializers),
	(ProcessStaticInitializers):
	fix compilation of classes such as Sun's implementation of
	java.lang.Character which use field declarations that declare more
	than one field. The misleading names NumInstanceVariables and
	NumClassVariables actually give the number of field declarations,
	not the number of variables declared (i.e. "int i = 0, j = 1;" was
	being treated as one rather than two).

2004-03-05  Eric Blake  <ebb9@byu.net>

	* src/ast.h (AstMemberValue, AstMemberValuePair, AstAnnotation),
	(AstModifierKeyword): New classes.
	(AstModifiers): Redo, to annotations in addition to keywords, per
	JSR 175.
	(AstPackageDeclaration): Add modifiers_opt.
	(AstLocalVariableStatement, AstLocalClassStatement),
	(AstClassCreationExpression): Rename to be shorter names.
	* src/decl.cpp (CheckPackage): Check for package annotations,
	although this needs more work.
	* src/error.h (ANNOTATION_MODIFIER_UNSUPPORTED),
	(RECOMMENDED_ANNOTATION_ORDER, DUPLICATE_ANNOTATION): New errors.
	* src/error.cpp: Ditto.
	* src/stream.h (PackageToken): New method, to allow for package
	modifiers.
	* src/stream.cpp: Reflect changes to stream.
	* src/parser.cpp (PackageHeaderParse): Ditto.
	* src/parser.h: Ditto.
	* src/scanner.cpp (ClassifyIdOrKeyword): Ditto.
	* src/semantic.h (ProcessPackageModifiers): New method.
	* src/ast.cpp: Reflect changes to AST.
	* src/body.cpp: Ditto.
	* src/bytecode.cpp: Ditto.
	* src/bytecode.h: Ditto.
	* src/definite.cpp: Ditto.
	* src/expr.cpp: Ditto.
	* src/modifier.cpp: Ditto.
	* src/symbol.cpp: Ditto.